<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/secondaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uPictureIv"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_img"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/uNameTv"
                    android:text="@string/uNameTv"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/pTimeTv"
                    android:text="@string/pTimeTv"
                    android:textColor="@color/primaryTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/pTitleTv"
            android:autoLink="all"/>

        <TextView
            android:id="@+id/pDescriptionTv"
            android:text="@string/pDescriptionTv"
            android:textColor="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/secondaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLikesTv"
                android:text="@string/pLikesTv"
                android:layout_weight="1"
                android:textColor="@color/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/pCommentsTv"
                android:text="@string/pCommentsTv"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/likeBtn"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_like_black" />

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/commentBtn"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_comment_black" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shareBtn"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_share_black" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>