<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="100dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_receiver"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameTv"
        android:text="@string/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/messageTv"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_message"
        android:textColor="@color/secondaryDark"/>

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_alignParentEnd="true"
        android:text="@string/time"
        android:layout_marginEnd="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryDark"/>

</LinearLayout>