<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/secondaryColor"
    app:contentPadding="3dp"
    android:layout_marginTop="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/groupIconIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_default_img"/>

        <TextView
            android:id="@+id/groupTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/group_titles"
            android:layout_toEndOf="@+id/groupIconIv"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:id="@+id/nameTv"
            android:layout_toEndOf="@+id/groupIconIv"
            android:layout_below="@+id/groupTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sender_name"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageTv"
            android:layout_below="@+id/groupTitleTv"
            android:layout_toEndOf="@id/nameTv"
            android:text="@string/the_messages"
            android:textColor="#666262"
            android:layout_marginStart="5dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTv"
            android:layout_below="@+id/nameTv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/_12_12_pm"
            android:singleLine="true"
            android:textColor="#666262"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>