<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/messageLayout"
    android:padding="10dp">

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_02_03_2019_05_59pm"
        android:textAlignment="textEnd"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_marginStart="160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profileIv"
            app:civ_border_color="@null"
            android:visibility="gone"
            android:src="@drawable/ic_default_img"/>

        <TextView
            android:id="@+id/messageTv"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/secondaryColor"
            android:background="@drawable/bg_sender"
            android:padding="15dp"
            android:text="@string/his_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSeentTv"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:text="@string/delivered"/>

</LinearLayout>