<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!--TextView: Label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/secondaryColor"
        android:textSize="32sp"/>

    <!--TextView: Label Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">

        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--TextView: Label Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--TextView: Register User-->
    <Button
        android:id="@+id/loginBtn"
        android:background="@drawable/button_round_grey"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_llave"
        android:drawablePadding="20dp"
        android:text="@string/login"/>

    <!--TextView: show dialog to recover password-->
    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_recover"
        android:layout_below="@id/loginBtn"
        android:textColor="@color/secondaryColor"/>

    <!--GoogleSignInBtn: Sign in with google account-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/recoverPassTv">
    </com.google.android.gms.common.SignInButton>


    <!--TextView: Click go to RegisterActivity-->
    <TextView
        android:id="@+id/nothave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account_register"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/secondaryColor"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>