<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:cardBackgroundColor="@color/secondaryColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_default_img"/>

        <TextView
            android:id="@+id/nameTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/diego"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/commentTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/this_is_actual_comment"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:id="@+id/timeTv"
            android:text="@string/_12_06_2019"
            android:layout_below="@+id/commentTv"
            android:textColor="@color/primaryTextColor"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:layout_toEndOf="@id/avatarIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>