<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--EditText: Input post title-->
        <EditText
            android:id="@+id/pTitleEt"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--ImageView: Input post image-->
        <ImageView
            android:id="@+id/pImageIv"
            android:background="@drawable/ic_add_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"/>

        <!--EditText: Input post description-->
        <EditText
            android:id="@+id/pDescriptionEt"
            android:padding="10dp"
            android:hint="@string/enter_descripcion"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Button: Publish post to firbease-->
        <Button
            android:id="@+id/pUploadBtn"
            android:background="@drawable/button_round_red"
            android:text="@string/upload"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>