<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <!--TextView: Label Register-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textColor="@color/secondaryColor"
        android:textSize="32sp"/>

    <!--TextView: Label Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">

        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--TextView: Label Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--TextView: Label User-->
    <Button
        android:id="@+id/registerBtn"
        android:text="@string/register"
        android:layout_below="@id/passwordTIL"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_round_grey"
        android:drawableLeft="@drawable/ic_register_white"
        android:drawablePadding="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>

    <!--TextView: Click go to LoginActivity-->
    <TextView
        android:id="@+id/have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="30dp"
        android:textColor="@color/secondaryColor"/>

</RelativeLayout>